force-app/main/default/objects/FEC_Field_Deploy_Request__c/FEC_Field_Deploy_Request__c.object-meta.xml
<CustomObject>
    <description>Stores field deploy request status and information for MDM Auto Field Creator</description>
    <label>Field Deploy Request</label>
    <nameField>
        <displayFormat>FDR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Deploy Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>