force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Completed_Date__c</fullName>
    <description>Timestamp when the deploy completed</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>