force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Deploy_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>FEC_Deploy_Job_Id__c</fullName>
    <description>Metadata deploy job ID</description>
    <label>Deploy Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>