force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Deploy_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Deploy_Status__c</fullName>
    <description>Deploy request status</description>
    <label>Deploy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>