force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>FEC_Error_Message__c</fullName>
    <description>Detailed error message from Metadata API</description>
    <label>Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>