force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_API_Name__c</fullName>
    <description>Field API name (e.g., My_Field__c)</description>
    <label>Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>