force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Field_Description__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_Description__c</fullName>
    <description>Field description</description>
    <label>Field Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>