force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_Label__c</fullName>
    <description>Field label</description>
    <label>Field Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>