force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Field_Length__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_Length__c</fullName>
    <description>Field length (for Text, Number types)</description>
    <label>Field Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>