force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_Type__c</fullName>
    <description>Field data type</description>
    <label>Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>