force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_MDS_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>FEC_MDS_Record_Id__c</fullName>
    <description>ID of the MDS record created after deploy</description>
    <label>MDS Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>