force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>FEC_Picklist_Values__c</fullName>
    <description>Picklist values (newline-separated)</description>
    <label>Picklist Values</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>