force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Related_Object__c.field-meta.xml
<CustomField>
    <fullName>FEC_Related_Object__c</fullName>
    <description>Related object for Lookup field type</description>
    <label>Related Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>