force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>FEC_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who made the deploy request</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Field Deploy Requests</relationshipLabel>
    <relationshipName>Field_Deploy_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>