force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Requested_Date__c</fullName>
    <description>Timestamp when the request was made</description>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>