force-app/main/default/objects/FEC_Field_Deploy_Request__c/fields/FEC_Target_Object__c.field-meta.xml
<CustomField>
    <fullName>FEC_Target_Object__c</fullName>
    <description>SObject API name (e.g., Case)</description>
    <label>Target Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>